--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.tipcalculator.MainActivity">
 
+    <!-- layout_width/ height: set layout of view (relative to the view's parent)    -->
     <TextView
         android:id="@+id/label_bill"
         android:layout_width="wrap_content"
